FIX contrast for hero text background to make it clearer

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -108,10 +108,10 @@ footer span {
     padding: 10px;
     margin-top: 30px;
     border-radius: 10%;
-    background-color: rgb(253, 245, 230, 0.5);
+    background-color: rgb(253, 245, 230, 0.6);
     color: #1d1b14;
     text-align: center;
-    text-shadow: 1px 1px rgb(41, 7, 236);
+    text-shadow: 0.5px 0.5px rgb(24, 20, 51);
 }
 
 
